k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-service
  namespace: viranova
  annotations:
    service.beta.kubernetes.io/do-loadbalancer-protocol: "http"
    service.beta.kubernetes.io/do-loadbalancer-connection-idle-timeout: "1800"  # 30 minutes
spec:
  selector:
    app: viranova
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: LoadBalancer
